--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "formik": "^2.4.6",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "prisma": "^5.15.0",
     "react": "^18",
     "react-dom": "^18",
     "yup": "^1.4.0"
